[package]
name = "sbproxy-ai"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
sbproxy-plugin.workspace = true
sbproxy-config.workspace = true
sbproxy-cache.workspace = true
sbproxy-security.workspace = true
sbproxy-platform.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
bytes.workspace = true
# WOR-800: prompt-store template rendering.
minijinja.workspace = true
tokio.workspace = true
smallvec.workspace = true
regex.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
lru = "0.16"
reqwest.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
prometheus.workspace = true
rand.workspace = true
futures.workspace = true
base64.workspace = true
thiserror.workspace = true
url.workspace = true

# Embedded provider catalog: gzipped YAML at build time, decompressed
# on first lookup. flate2 is the standard Rust gzip implementation;
# serde_yaml is already in the workspace via the OSS config crate.
flate2 = "1"
serde_yaml.workspace = true

# Pre-request token estimation for fail-fast TPM enforcement (WOR-232).
# Ships the cl100k_base and o200k_base BPEs used by GPT-4, GPT-4o, and
# the o-series. The crate caches its `CoreBPE` singletons internally
# so each tokenizer pays its initialization cost once per process.
tiktoken-rs = "0.11"

[dev-dependencies]
tempfile = "3"
tracing-subscriber.workspace = true
