[package]
name = "sbproxy-classifier-sidecar"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false
description = "Minimal OSS classifier sidecar: serves the shared InferenceService gRPC contract backed by the tract ONNX engine (WOR-704)."

[[bin]]
name = "sbproxy-classifier-sidecar"
path = "src/main.rs"

[dependencies]
sbproxy-classifier-proto = { path = "../sbproxy-classifier-proto" }
sbproxy-classifiers = { path = "../sbproxy-classifiers" }
tonic = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
