[package]
name = "sbproxy-classifiers"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false
description = "Pure-Rust ONNX inference + tokenizer wrapper for sbproxy detectors."

[dependencies]
# Pure-Rust ONNX runtime. Avoids the C++ ONNX Runtime + system libs that
# `ort` would pull in, which is critical for cross-compile and for
# building on hosts without onnxruntime installed.
tract-onnx = "0.21"
# Hugging Face tokenizers. Pure Rust, supports BPE / WordPiece / etc.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Cross-platform cache directory resolution. `dirs` is lighter than
# `directories` (no extension-name machinery); we only need a cache
# folder per user.
dirs = "5"

reqwest = { workspace = true, features = ["blocking"] }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
# Detached-signature verification for the optional supply-chain hardening
# path (WOR-146). Already used elsewhere in the workspace; no new heavy
# dep is added by enabling it here.
ed25519-dalek = "2"
# Base64 decoding for inline PEM SPKI public keys passed to the optional
# signature-verification path.
base64 = { workspace = true }
# Agent-class taxonomy: regex compilation + YAML loader for the
# embedded vendor catalog. `serde_yaml` is the workspace-aliased
# `yaml_serde` fork; `serde_json` powers the `AgentPurpose` serialiser
# tests and the public JSON-shaped wire format.
regex = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

# Classifier Judge gRPC service. The OSS handler delegates to
# `sbproxy_ai::judge::JudgeClient` for the actual upstream call,
# caching, and budget enforcement; we only own the wire layer.
# Pinned to the same major as e2e/Cargo.toml so a single tonic /
# prost compile is shared by the workspace.
tonic = "0.12"
prost = "0.13"
sbproxy-ai.workspace = true
sbproxy-plugin.workspace = true
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = "3"
# In-process tonic server tests for the Judge RPC handler.
tokio = { workspace = true, features = ["full", "macros"] }
chrono = { workspace = true }

[build-dependencies]
# Compiles `proto/judge.proto` for the Classifier Judge RPC. Kept
# pinned to the same major as `tonic` above so the workspace builds
# a single tonic/prost.
tonic-build = "0.12"
