[package]
name = "sbproxy-config"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
sbproxy-capability.workspace = true
sbproxy-plugin.workspace = true
sbproxy-platform.workspace = true
sbproxy-observe.workspace = true

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
# WOR-1140: collect unknown/misspelled config keys at parse time so a
# typo in a (often protection-disabling) key fails boot instead of being
# silently dropped.
serde_ignored = "0.1"
anyhow = { workspace = true }
http = { workspace = true }
compact_str = { workspace = true }
smallvec = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
# WOR-1081: JSON Schema generation from the Rust config types so
# editor tooling (vscode-yaml, IntelliJ) validates `sb.yml`
# against the runtime-truth types instead of a hand-rolled file.
schemars = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
