[package]
name = "sbproxy-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

# --- AI Governance feature flags ---
#
# Library consumers opt in; the `sbproxy` binary turns these on via its own
# `default` feature set.
#
# Flags:
# - agent-class : `agent_class` resolver on `RequestContext`. The
# resolver combines UA match, reverse-DNS verification, and bot-auth
# keyid; the resolved value is exposed to CEL, Lua, JS, and WASM.
[features]
default = []
# Pulls the resolver in `sbproxy-modules::policy::agent_class` and the
# reverse-DNS verifier in `sbproxy-security::agent_verify` into the
# request pipeline. Off by default for library consumers; the
# `sbproxy` binary turns it on via its own default feature set.
agent-class = [
    "dep:sbproxy-classifiers",
    "sbproxy-modules/agent-class",
    "sbproxy-security/agent-class",
]
# `agent-classifier` adds the optional ML agent classifier verdict
# field on `RequestContext`. The actual ONNX inference and feature
# builder live in the enterprise
# crate `sbproxy-classifier`; this flag only widens the per-request
# context to hold the verdict the enterprise classifier produces. The
# OSS proxy does not run the classifier itself.
agent-classifier = ["agent-class"]
# Forwards through to `sbproxy-tls/tls-fingerprint`,
# enabling JA3 / JA4 / JA4H capture in the request pipeline. The
# `tls_fingerprint` and `headless_signal` fields on `RequestContext`
# are present unconditionally (so types resolve either way) but stay
# `None` when the feature is off.
tls-fingerprint = [
    "sbproxy-tls/tls-fingerprint",
    "sbproxy-security/tls-fingerprint",
    "dep:sbproxy-classifiers",
]
# WOR-227 (scaffold). When on, the admin server compiles in
# `include_dir!("../../ui/dist")` and serves the embedded asset
# tree at `/admin/ui/*`. Off by default so the standard build does
# not depend on a prior `pnpm build` and binary size stays slim.
# Real views land in follow-up tickets; this feature only wires
# the scaffold mount.
embed-admin-ui = ["dep:include_dir"]

[dependencies]
sbproxy-plugin.workspace = true
sbproxy-config.workspace = true
sbproxy-tls.workspace = true
sbproxy-modules.workspace = true
sbproxy-middleware.workspace = true
sbproxy-httpkit.workspace = true
sbproxy-observe.workspace = true
sbproxy-extension.workspace = true
sbproxy-ai.workspace = true
sbproxy-cache.workspace = true
sbproxy-platform.workspace = true
sbproxy-openapi.workspace = true
sbproxy-security.workspace = true
# Agent-detect engine (WOR-499). The pipeline runs the scorer per request
# when enabled and stashes the AgentDetection on the request context for the
# scripting bridges and the trust_tier combiner. Non-optional: behaviour is
# gated by a default-off config flag, not a cargo feature, so server.rs stays
# free of #[cfg] noise on the hot path.
sbproxy-agent-detect.workspace = true
# Optional: only pulled in when the `agent-class` feature is on. The
# request context references `sbproxy_classifiers::AgentId` etc., and
# the scripting bridges read those types to expose `request.agent_id`.
sbproxy-classifiers = { workspace = true, optional = true }

# Pingora
pingora-core.workspace = true
pingora-proxy.workspace = true
pingora-http.workspace = true
pingora-error.workspace = true

# Bloom filter for hostname pre-check
bloomfilter.workspace = true

# CIDR matching for trusted_proxies / X-Forwarded-For trust boundary
ipnetwork.workspace = true

# Enterprise hook registration (link-time plugin pattern)
inventory.workspace = true

# Concurrency and data structures
arc-swap.workspace = true
compact_str.workspace = true
smallvec.workspace = true
bytes.workspace = true

# URL parsing
url.workspace = true

# HTTP types (HeaderMap for auth checks)
http.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }

# Hot reload
notify.workspace = true

# Observability
tracing.workspace = true

# Error handling
anyhow.workspace = true

# Serialization (for action_config access)
serde_json.workspace = true
serde.workspace = true
# TlsFingerprintConfig parses
# proxy.extensions.tls_fingerprint from the operator YAML.
serde_yaml.workspace = true

# Regex for forward-rule path constraints and whole-path matchers
regex.workspace = true

# HTTP client (for AI proxy forwarding)
reqwest.workspace = true
futures.workspace = true

# UUID generation (for session cookies)
uuid.workspace = true
# ULID parsing for session_id / parent_session_id
ulid.workspace = true

# Identity / hashing for webhook envelope (instance_id tag, config_revision)
rand.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
chrono.workspace = true

# WOR-227 scaffold. Optional; only pulled in by the `embed-admin-ui`
# feature. The macro embeds `ui/dist/` at compile time so the
# binary serves the admin SPA without a separate static-asset
# deployment.
include_dir = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
base64 = "0.22"
loom = "0.7"
# WOR-169: hooks tests scrape `sbproxy_hooks_channel_dropped_total` from
# the global Prometheus registry to assert the bounded-channel drop
# counter advances. Pulls the same workspace pin used by sbproxy-observe.
prometheus = { workspace = true }
